# Utils

./: BinomialCoefficient.uni  CMakeLists.txt  LICENSE
Bash/: install_ubuntu.sh
Components/Alerts/: Alert.css  Alert.js  index.html
Components/CanvasManager/: canvasHandler.js  canvasManager.js  canvasManager_old.js  index.html
Components/ContextMenu/: ContextMenu.css  ContextMenu.css.map  ContextMenu.html  ContextMenu.js
Components/G/: README.md  g.es5.js  g.js  g.out.js  index.html  index.js  package.json
Components/GQuerry/: gquerry.js  index.html
Components/LayersViewer/: LayersViewer.css  LayersViewer.css.map  LayersViewer.html  LayersViewer.js
Components/Modal/: index.html  modal.css  modal.js
Components/Tester/: Tester.html  Tester.js  index.js  package.json
Components/TopMenu/: TopMenu.css  TopMenu.css.map  TopMenu.html  TopMenu.js
Components/contextMenu/: contextMenu.css  contextMenu.html  contextMenu.js
Java/: SystemInfoGrabber.java
Python/: cvToPyQt.py  myWindow.py  portScanner.py  socketTest.py  sound.py  systeminfo (Case Conflict).py  systeminfo.py  webCam.py  webScanner.py  webScraping.py
Web/: nikx.7z
c/: GAvlTree.h  GBuffer.h  GFront.h  GHashMap.h  avlTree.c  buffer  buffer.c  front  front.c  hashMap  hashMap.c  main.c
c++/: GMath  GMath.cpp  GMath.h  GMathUtils.h  GMaths2.h  main  main.cpp  unitsTester  unitsTester.cpp
c++/Utils/: Hasher  (+5 more)
js/: CanvasManager.js  GMath.js  Utils.js  bidirectionalBinding.js  canvasManager.js  configCreator.js  eventTimer.js  fileManager.js  fullImage.js  systemInfoGrabber.js
php/: Utils.php
(+48 files in other folders)
